Fixing dark mode

--- a/css/rent.css
+++ b/css/rent.css
@@ -11,7 +11,6 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   margin: 0;
-  padding: 20px;
   overflow-x: hidden;
 }
 
